<resources>
    <string name="app_name">Helpy</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>

    <!--TopicListActivity-->
    <string name="title_activity_need_help_topic_list">NeedHelpTopicListActivity</string>
    <string name="title_need_help">J\'ai besoin d\'aide</string>
    <string name="title_can_help">Je peux aider</string>
    <string name="title_which_subject">Pour quel sujet ?</string>
    <string name="toast_add_as_needer">Vous êtes ajouté comme demandeur d\'aide pour ce sujet.</string>
    <string name="toast_add_as_helper">Vous êtes ajouté comme proposeur d\'aide pour ce sujet.</string>
    <string name="toast_need_help_removed">Votre demande d\'aide est supprimée.</string>
    <string name="toast_can_help_removed">Votre proposition d\'aide est supprimée.</string>

    <!--AddTopicActivity-->
    <string name="title_add_new_subject">Ajouter un nouveau sujet</string>
    <string name="subject_name">Nom du sujet</string>
    <string name="general_subject">Matière</string>
    <string name="text_inscription_need_helper">Vous serez automatiquement inscrit comme <b><font color="#FF3838">demandeur</font></b> d\'aide pour ce sujet.</string>
    <string name="text_inscription_can_helper">Vous serez automatiquement inscrit comme <b><font color="#38D138">proposeur</font></b> d\'aide pour ce sujet.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toast_adding_topic_error">Une erreur est survenue lors de l\'ajout du sujet, veuillez réessayer ultérieurement.</string>


    <string name="menu_profil">Profil</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_deconnect">Deconnexion</string>
    <string name="menu_demo">Voir Demo</string>
    <string name="menu_share">Share</string>
    <string name="menu_propos">A Propos</string>
    <string name="menu_send">Send</string>

    <!--LoginActivity-->
    <string name="lbl_connect">Se connecter</string>
    <string name="lbl_inscription">S\'inscrire</string>
    <string name="lbl_already_member">Déjà membre</string>
    <string name="lbl_create_account">Créer un compte</string>
    <string name="toast_login_error">Une erreur est survenue lors de l\'authentification, veuillez réessayer ultérieurement.</string>
    <string name="toast_login_invalid">Identifiants invalides</string>
    <string name="toast_signin_error">Une erreur est survenue lors de l\'inscription, veuillez réessayer ultérieurement.</string>
    <string name="toast_signin_invalid_class">La promotion saisie est invalide</string>
    <string name="toast_signin_invalid_mail">Un compte existe déjà pour cette adresse mail.</string>


    <!--settingsActivity-->
    <string name="lbl_first_name">Prénom</string>
    <string name="lbl_last_name">Nom</string>
    <string name="lbl_names">Prénom Nom</string>
    <string name="lbl_mail">Adresse mail</string>
    <string name="lbl_pwd">Mot de passe</string>
    <string name="lbl_promo_code">Code de la promotion</string>
    <string name="lbl_current_pwd">Mot de passe actuel</string>
    <string name="lbl_new_pwd">Nouveau mot de passe</string>
    <string name="lbl_confirm_pwd">Confirmer mot de passe</string>
    <string name="lbl_phone">Téléphone</string>
    <string name="lbl_contact_title">Je souhaite être contacté(e)</string>
    <string name="lbl_contact_phone">par téléphone</string>
    <string name="lbl_contact_sms">par sms</string>
    <string name="lbl_contact_mail">par mail</string>
    <string name="lbl_contact_alert_p">recevoir les notifications qui me concernent</string>
    <string name="lbl_contact_alert_g">recevoir toutes les notifications</string>

</resources>
