<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Need_Help.AddSubjectNeedHelpActivity">

    <EditText
        android:id="@+id/edit_subject_name_need_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_medium_margin"
        android:hint="@string/subject_name"
        android:textSize="@dimen/small_text_size" />

    <Spinner
        android:id="@+id/spinner_general_subject_need_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_medium_margin"
        android:hint="@string/general_subject" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_medium_margin"
        android:gravity="center"
        android:text="@string/text_inscription_need_helper"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size" />

    <Button
        android:id="@+id/btn_validate_add_subject_need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_medium_margin"
        android:layout_marginBottom="@dimen/small_medium_margin"
        android:background="@drawable/button_red"
        android:text="@string/validate"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/btn_cancel_add_subject_need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textSize="@dimen/small_text_size" />

</LinearLayout>