<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/dialog_topic_rectangle"
    android:orientation="vertical"
    android:padding="@dimen/medium_large_margin"
    tools:context=".TopicList.AddTopicActivity">

    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_add_new_subject"
        android:textAlignment="center"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/edit_subject_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_large_margin"
        android:layout_weight="1"
        android:background="@drawable/edit_text_rectangle"
        android:hint="@string/subject_name"
        android:inputType="textEmailAddress"
        android:padding="@dimen/small_medium_margin"
        android:textSize="@dimen/small_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_large_margin"
        android:layout_weight="1"
        android:background="@drawable/edit_text_rectangle"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_general_subject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:elevation="1dp"
            android:padding="@dimen/small_medium_margin"
            android:popupBackground="@drawable/edit_text_rectangle"
            android:prompt="@string/general_subject"
            android:spinnerMode="dropdown"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_info_demand"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_large_margin"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/text_inscription_need_helper"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/small_text_size" />

    <Button
        android:id="@+id/btn_validate_add_subject"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_large_margin"
        android:layout_weight="1"
        android:background="@drawable/button_red"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/validate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size" />

    <TextView
        android:id="@+id/btn_cancel_add_subject"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_large_margin"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textSize="@dimen/small_text_size" />

</LinearLayout>