<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:backgroundTint="@color/lightGreySettings"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="20dp">

        <!--Contenu de l'écran-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_person_grey" />

            <TextView
                android:id="@+id/lblMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginStart="8dp"
                android:padding="0dp"
                android:text="@string/lbl_mail"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/lbl_first_name"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rectangle"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:nextFocusRight="@+id/txtLastName"
                    android:nextFocusDown="@+id/txtLastName"
                    android:nextFocusForward="@+id/txtLastName"
                    android:paddingStart="8dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/darkGrey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/lbl_last_name"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rectangle"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/darkGrey" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_phone_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/lbl_phone"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rectangle"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingStart="8dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/darkGrey" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_lock_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblCurrentPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/lbl_current_pwd"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/txtCurrentPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rectangle"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/darkGrey" />

                <TextView
                    android:id="@+id/lblNewPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:padding="0dp"
                    android:text="@string/lbl_new_pwd"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/txtNewPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rectangle"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/darkGrey" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="20dp"
                    app:srcCompat="@drawable/ic_settings_grey" />

                <TextView
                    android:id="@+id/lbl_contact_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginStart="8dp"
                    android:padding="0dp"
                    android:text="@string/lbl_contact_title"
                    android:textColor="@color/darkGrey"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chk_contact_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/grey"
                android:text="@string/lbl_contact_phone"
                android:textColor="@color/grey" />

            <CheckBox
                android:id="@+id/chk_contact_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/grey"
                android:text="@string/lbl_contact_sms"
                android:textColor="@color/grey" />

            <CheckBox
                android:id="@+id/chk_contact_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/grey"
                android:text="@string/lbl_contact_mail"
                android:textColor="@color/grey" />

            <CheckBox
                android:id="@+id/chk_contact_alert_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/grey"
                android:text="@string/lbl_contact_alert_p"
                android:textColor="@color/grey" />

            <CheckBox
                android:id="@+id/chk_contact_alert_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/grey"
                android:text="@string/lbl_contact_alert_g"
                android:textColor="@color/grey" />

        </LinearLayout>


        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab_validate_profil"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:backgroundTint="@color/grey"-->
        <!--app:fabSize="auto" />-->
    </LinearLayout>

</ScrollView>